split login to container to make it smaller pieces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
     "airbnb",
     "next/core-web-vitals"
   ],
+  "linebreak-style": [
+    "error", "windows"
+  ],
   "overrides": [
     {
       "files": [
