--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.1",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
