--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,14 @@
     "baseUrl": ".",
     "paths": {
       "@components": ["src/components"],
-      "@layout": ["src/layout"],
-      "@layout/*": ["src/layout/*"],
+      "@layouts": ["src/layouts"],
+      "@layouts/*": ["src/layouts/*"],
       "@models": ["src/models"],
       "@models/*": ["src/models/*"],
       "@pages": ["src/pages"],
       "@store": ["src/store"],
-      "@styles/*": ["src/styles/*"]
+      "@styles/*": ["src/styles/*"],
+      "@image": ["public/assets/img"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
