--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
     "react-resize-detector": "^7.1.2",
+    "react-router-dom": "^6.8.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
