--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,8 @@
     "react-hooks"
   ],
   "rules": {
+    // delete all comments
+    "no-comments": "error",
     // Checks rules of Hooks
     "react-hooks/rules-of-hooks": "error",
     // Checks rules of Hooks
