--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.0.4",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.8.0",
+    "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
