--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_POKEMON_LIST_API_BASE_URL=https://json-server-mock.vercel.app/api/
-API_ENDPOINT=http://localhost:4000
+NEXT_PUBLIC_API_ENDPOINT=http://localhost:4000
