--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
     "next": "13.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -40,6 +41,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
