--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
+    "intl": "^1.2.5",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.1",
