--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.0.0",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.5",
     "admin-lte": "^3.2.0",
@@ -40,7 +41,8 @@
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
