--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "next": "13.0.1",
-    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-cookie": "^4.1.1",
+    "react-currency-input-field": "^3.6.10",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
